# adom

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  config.sample.yaml  pyproject.toml
docs/: programmatic-usage.md
examples/chat/: present_time.py  repl.py
examples/plugins/: calculator.py  http_fetch.py  multi_tool.py  openapi_petstore.py
src/adomcore/: __init__.py  cli.py  utils.py
src/adomcore/app/: __init__.py  container.py  lifespan.py  logging.py  main.py  paths.py  settings.py
src/adomcore/domain/: __init__.py  actions.py  agent.py  capabilities.py  cron.py  events.py  ids.py  mcp.py  memory.py  messages.py  models.py  plugins.py  policies.py  skills.py  streaming.py
src/adomcore/integrations/: __init__.py
src/adomcore/plugins/: __init__.py  base.py  context.py  manifest.py  openapi.py
src/adomcore/runtime/: __init__.py  action_router.py  agent_runtime.py  compact_manager.py  context_builder.py  response_builder.py
src/adomcore/services/: agent_service.py  capability_registry.py  compact_service.py  conversation_service.py  cron_dispatch_service.py  mcp_service.py  mcp_session_manager.py  model_service.py  plugin_loader.py  plugin_manager.py  plugin_model_gateway.py  scheduler_service.py  self_mutation_service.py  skill_service.py  (+2 more)
tests/unit/: test_app_settings.py  test_builtin_plugins.py  test_mcp_stdio_client.py  test_openapi_plugin.py  test_plugin_context.py  test_plugin_loader.py  test_runtime_context_builder.py  test_scheduler_service.py  test_token_estimators.py  test_tool_executor_progress.py  test_utils.py
(+71 files in other folders)
